--- a/templates/puppet-r10k-deployment.yaml
+++ b/templates/puppet-r10k-deployment.yaml
@@ -278,7 +278,7 @@ spec:
         {{- end }}
       {{- if .Values.nodeSelector }}
       nodeSelector:
-        {{ toYaml .Values.affinity | nindent 10 }}
+        {{ toYaml .Values.nodeSelector | nindent 10 }}
       {{- end }}
       {{- if .Values.affinity }}
       affinity:
