fixing #14 legacy bitnami chart reference

--- a/values.yaml
+++ b/values.yaml
@@ -903,6 +903,9 @@ puppetdb:
 postgresql:
   enabled: true
 
+  image:
+    repository: bitnamilegacy/postgresql
+
   architecture: standalone
 
   networkPolicy:
